// Упрощенная схема для интернет-магазина книг
// Для использования в dbdiagram.io

Table users {
  id integer [pk, increment]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null] 
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  phone varchar(20)
  role varchar(20) [default: 'customer', note: 'customer|admin|manager']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table categories {
  id integer [pk, increment]
  name varchar(255) [unique, not null]
  slug varchar(255) [unique, not null] 
  description text
  parent_id integer [ref: > categories.id, note: 'Иерархия категорий']
  is_active boolean [default: true]
  sort_order integer [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table publishers {
  id integer [pk, increment]
  name varchar(255) [unique, not null]
  country varchar(100)
  website varchar(255)
  email varchar(255)
  phone varchar(20)
  address text
  founded_year integer
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table authors {
  id integer [pk, increment]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  middle_name varchar(100)
  birth_date date
  death_date date
  nationality varchar(100)
  biography text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table books {
  id integer [pk, increment]
  title varchar(500) [not null]
  description text
  isbn varchar(20) [unique]
  price decimal(10,2) [not null]
  stock integer [default: 0]
  pages integer
  language varchar(50) [default: 'ru']
  publication_year integer
  edition varchar(100)
  weight decimal(8,3)
  popularity integer [default: 0]
  category_id integer [ref: > categories.id, not null]
  publisher_id integer [ref: > publishers.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table book_authors {
  id integer [pk, increment]
  book_id integer [ref: > books.id, not null]
  author_id integer [ref: > authors.id, not null]
  role varchar(50) [default: 'author', note: 'author|co-author|translator|editor']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Indexes {
    (book_id, author_id, role) [unique]
  }
}

Table cart_items {
  id integer [pk, increment]
  user_id integer [ref: > users.id, not null]
  book_id integer [ref: > books.id, not null]
  quantity integer [default: 1]
  added_at timestamp [default: `now()`]
  
  Indexes {
    (user_id, book_id) [unique]
  }
}

// Связи и комментарии
Note: '''
# Упрощенная схема интернет-магазина книг

## Основные сущности:
- **users**: Пользователи с ролями (customer, admin, manager)
- **categories**: Иерархические категории книг
- **publishers**: Издательства с контактной информацией
- **authors**: Авторы с биографическими данными
- **books**: Книги с полной информацией (ISBN, цены, остатки)
- **book_authors**: Связь книг и авторов (many-to-many)
- **cart_items**: Корзина покупок пользователей

## Удаленные таблицы (упрощение):
- ❌ orders, order_items (система заказов)
- ❌ reviews (отзывы пользователей)
- ❌ wishlist (список желаний)

## Связи:
- Иерархия категорий (self-reference)
- Один издатель → много книг
- Одна категория → много книг
- Много авторов ↔ много книг (через book_authors)
- Один пользователь → много позиций корзины
'''